# prototypes

./: .gitignore  README.md
AudioScope/: AudioScope.sln  audio_visualise.ipynb
BlazorServerWebRTCEcho/: BlazorServerWebRTCEcho.csproj  BlazorServerWebRTCEcho.sln  Dockerfile  Program.cs  Startup.cs  _Imports.razor
BlazorWasmWebRTCEcho/: BlazorWasmWebRTCEcho.sln  Program.cs  _Imports.razor
DtlsHandshakeTest/: DtlsHandshakeTest.cpp  DtlsHandshakeTest.sln  DtlsHandshakeTest.vcxproj  DtlsHandshakeTest.vcxproj.filters
FfmpegFromCSharp/: FfmpegFromCSharp.sln  Program.cs
FfmpegInterop/: FfmpegInit.cs  FfmpegInterop.csproj  FfmpegInterop.sln  VideoEncoder.cs  VideoFrameConverter.cs
FfmpegInteropTestConsole/: FfmpegInteropTestConsole.csproj  FfmpegInteropTestConsole.sln  Program.cs
FfmpegVP8EncodeTest/: FfmpegVP8EncodeTest.cpp  FfmpegVP8EncodeTest.sln  FfmpegVP8EncodeTest.vcxproj  FfmpegVP8EncodeTest.vcxproj.filters
HilbertAudioVisualiser/: Form1.Designer.cs  Form1.cs  FormAudioScope.Designer.cs  FormAudioScope.cs  HilbertAudioVisualiser.csproj  HilbertAudioVisualiser.sln  HilbertFilter.cs  OscilliscopeVisualiser.cs  Program.cs
KurentoEchoClient/: KurentoEchoClient.csproj  KurentoEchoClient.sln  KurentoModel.cs  Program.cs
LoadNativeLibrary/: LoadNativeLibrary.sln  Program.cs
libwebrtc-echo/: CMakeLists.txt  Dockerfile  Dockerfile-AppBuilder  HttpSimpleServer.cpp  PcFactory.cpp  PcFactory.h  PcObserver.cpp  PcObserver.h  README.md  datachanneldemo.cpp  libwebrtc-webrtc-echo.cpp  libwebrtc-webrtc-echo.vcxproj  libwebrtc-webrtc-echo.vcxproj.filters
(+104 files in other folders)
